@@ -1,5 +1,6 @@
 package org.training.meetingroombooking.service.impl;
 
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -7,6 +8,7 @@ import org.springframework.stereotype.Service;
 import org.training.meetingroombooking.entity.dto.RoleDTO;
 import org.training.meetingroombooking.entity.enums.ErrorCode;
 import org.training.meetingroombooking.entity.mapper.RoleMapper;
+import org.training.meetingroombooking.entity.models.Permission;
 import org.training.meetingroombooking.entity.models.Role;
 import org.training.meetingroombooking.exception.AppEx;
 import org.training.meetingroombooking.repository.PermissionRepository;
@@ -29,55 +31,59 @@ public class RoleServiceImpl implements RoleService {
     this.roleMapper = roleMapper;
   }
 
+  @Override
   public RoleDTO create(RoleDTO request) {
     if (roleRepository.existsById(request.getRoleName())) {
       throw new AppEx(ErrorCode.ROLE_EXISTS);
     }
-    var role = roleMapper.toEntity(request);
-    var permissions = permissionRepository.findAllById(request.getPermissions());
-    var missingPermissions =
-        request.getPermissions().stream()
-            .filter(
-                p ->
-                    permissions.stream()
-                        .noneMatch(dbPermission -> dbPermission.getPermissionName().equals(p)))
-            .collect(Collectors.toSet());
-    if (!missingPermissions.isEmpty()) {
-      throw new AppEx(ErrorCode.PERMISSION_NOT_FOUND);
-    }
+    Role role = roleMapper.toEntity(request);
+    List<String> permissionsList = new ArrayList<>(request.getPermissions());
+    var permissions = getValidPermissions(permissionsList);
     role.setPermissions(new HashSet<>(permissions));
-    Role savedrole = roleRepository.save(role);
-    return roleMapper.toDTO(savedrole);
+    Role savedRole = roleRepository.save(role);
+    return roleMapper.toDTO(savedRole);
   }
 
+  @Override
   public List<RoleDTO> getAll() {
-    return roleRepository.findAll().stream().map(roleMapper::toDTO).toList();
+    return roleRepository.findAll().stream().map(roleMapper::toDTO).collect(Collectors.toList());
   }
 
+  @Override
   public RoleDTO update(String roleName, RoleDTO request) {
     Role role =
         roleRepository.findById(roleName).orElseThrow(() -> new AppEx(ErrorCode.ROLE_NOT_FOUND));
-    var permissions = permissionRepository.findAllById(request.getPermissions());
-    var missingPermissions =
-        request.getPermissions().stream()
-            .filter(
-                p ->
-                    permissions.stream()
-                        .noneMatch(dbPermission -> dbPermission.getPermissionName().equals(p)))
-            .collect(Collectors.toSet());
-    if (!missingPermissions.isEmpty()) {
-      throw new AppEx(ErrorCode.PERMISSION_NOT_FOUND);
-    }
+    List<String> permissionsList = new ArrayList<>(request.getPermissions());
+    var permissions = getValidPermissions(permissionsList);
     role.setPermissions(new HashSet<>(permissions));
     role.setRoleName(request.getRoleName());
     Role updatedRole = roleRepository.save(role);
     return roleMapper.toDTO(updatedRole);
   }
 
+  @Override
   public void delete(String roleName) {
-    if (!roleRepository.existsById(roleName)) {
-      throw new AppEx(ErrorCode.ROLE_NOT_FOUND);
+    roleRepository
+        .findById(roleName)
+        .ifPresentOrElse(
+            roleRepository::delete,
+            () -> {
+              throw new AppEx(ErrorCode.ROLE_NOT_FOUND);
+            });
+  }
+
+  private List<Permission> getValidPermissions(List<String> permissionNames) {
+    var permissions = permissionRepository.findAllById(permissionNames);
+    var missingPermissions =
+        permissionNames.stream()
+            .filter(
+                p ->
+                    permissions.stream()
+                        .noneMatch(dbPermission -> dbPermission.getPermissionName().equals(p)))
+            .collect(Collectors.toSet());
+    if (!missingPermissions.isEmpty()) {
+      throw new AppEx(ErrorCode.PERMISSION_NOT_FOUND);
     }
-    roleRepository.deleteById(roleName);
+    return permissions;
   }
 }
